--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="collapse navbar-collapse d-flex justify-content-end " id="navbarSupportedContent">
       <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Explore</a>
+          <a class="nav-link" href="./pages/adventures/index.html">Explore</a>
         </li>
        
     </div>
@@ -58,15 +58,79 @@
 
   <div class="container">
   <div class="container text-center"></div>
-  <div class="row row-cols-4">
-    <div class="col">Bangluru</div>
-    <div class="col"> Kolkata</div>
-    <div class="col"> Goa</div>
-    <div class="col"> Mumbai</div>
-    <div class="col"> Singapore</div>
-    <div class="col"> Dubai</div>
-    <div class="col"> Malaysia</div>
-    <div class="col">Paris</div>
+  <div class="row ">
+    <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/bengaluru.jpg" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3>Bengaluru</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
+    <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/kolkata.webp" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3> Kolkata</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
+     <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/goa.jpg" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3>Goa</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
+     <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/mumbai.jpg.webp" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3>Mumbai</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
+     <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/singapore.jpg" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3> Singapore</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
+     <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/dubai.jpg" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3>Dubai</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
+     <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/malaysia.jpg.webp" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3>Malaysia</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
+     <div class="col-12 col-sm-6 col-md-3"><a href="./pages/adventures/index.html">
+      <div class="tile">
+         <img src="./assets/paris.jpg" alt="Adventure Image" class="img-fluid" height="100%" width="100%">
+         <div class="tile-text text-white">
+          <h3>Paris</h3>
+          <p class="">100+ Places </p>
+        </div>
+      </div>
+    </a></div>
   </div>
 </div>
     <!-- TODO: MODULE_LAYOUT -->
