--- a/pages/adventures/index.html
+++ b/pages/adventures/index.html
@@ -1,34 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>QTrip Adventures</title>
+    <link rel="stylesheet" href="../../css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QTrip Adventures</title>
-  <link rel="stylesheet" href="../../css/styles.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../../index.html">QTrip</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../../index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!">Explore</a>
+            </li>
+            <!-- Additional navigation items can be added here -->
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<body>
-  <!-- TODO: MODULE_ADVENTURES_GRID -->
-  <!-- 1. Copy navigation bar HTML from Landing page document -->
+    <!-- TODO: MODULE_ADVENTURES_GRID -->
+    <!-- 1. Copy navigation bar HTML from Landing page document -->
 
-  <div class="container">
-    <div class="content">
-      <!-- TODO: MODULE_ADVENTURES_GRID -->
-      <!-- 1. Create the grid of adventures by adding child elements as required. -->
+    <div class="container">
+      <div class="content">
+        <h1>Exploar all adventures</h1>
+        <p>
+          Here is the list of adventures that you can exploare in cities around
+          the world.
+        </p>
+        <div class="row">
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 mb-3">
+            <a href="./resort/index.html">
+              <div class="adventure-card border border-dark">
+                <img
+                  src="../../assets/adventures/resort.webp"
+                  alt="Resort"
+                  width="100%"
+                  height="70%"
+                />
+                <div
+                  class="text-center mt-2 d-md-flex justify-content-between align-items-center px-2"
+                >
+                  <h3>Resort</h3>
+                  <p>$ 200</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- TODO: MODULE_ADVENTURES_GRID -->
+        <!-- 1. Create the grid of adventures by adding child elements as required. -->
+      </div>
     </div>
-  </div>
 
-  <footer>
-    <div class="container">© QTrip 2020</div>
-  </footer>
-  
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"
-  ></script>
-</body>
+    <footer>
+      <div class="container">© QTrip 2020</div>
+    </footer>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
