--- a/pages/adventures/index.html
+++ b/pages/adventures/index.html
@@ -209,7 +209,7 @@
     </div>
 
     <footer>
-      <div class="container">© QTrip 2020</div>
+      <div class="container">© QTrip 2025 Made by Amit</div>
     </footer>
 
     <script
