--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </div>
 
   <footer>
-    <div class="container">© QTrip 2025 by Amit</div>
+    <div class="container">© QTrip 2025 Made by Amit</div>
   </footer>
 
   <!-- TODO: MODULE_LAYOUT -->
