--- a/pages/adventures/resort/index.html
+++ b/pages/adventures/resort/index.html
@@ -1,35 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>QTrip Adventure Detail</title>
+    <link rel="stylesheet" href="../../../css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-   <meta charset="UTF-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>QTrip Adventure Detail</title>
-   <link rel="stylesheet" href="../../../css/styles.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+  <body>
+   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">QTrip</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/adventures/index.html">Explore</a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </div>
+    </nav>
+ 
+    <!-- TODO: MODULE_ADVENTURE_DETAILS -->
+    <!-- 1. Copy navigation bar HTML from Landing page document -->
 
-<body>
-   <!-- TODO: MODULE_ADVENTURE_DETAILS -->
-   <!-- 1. Copy navigation bar HTML from Landing page document -->
-
-   <div class="container">
+    <div class="container">
       <div class="content">
-          <!-- TOOD: MODULE_ADVENTURE_DETAILS -->
-          <!-- 1. Write the child elements as required. -->
-          <!-- 2. Remember to use .adventure-card and its related classes. -->
-
+        <div class="row">
+          <div class="col-12 col-lg-8">
+            <div class="row">
+              <div class="col-12 col-lg-8">
+                <img
+                  src="../../../assets/adventures/resort/resort1.jpg"
+                  alt="resort img 1"
+                  height="100%"
+                  width="100%"
+                />
+              </div>
+              <div class="col-lg-4 d-none d-lg-block">
+                <div class="mb-1">
+                  <img
+                    src="../../../assets/adventures/resort/resort2.jpg"
+                    alt="resort img 2"
+                    height="100%"
+                    width="100%"
+                  />
+                </div>
+                <div class="mt-2">
+                  <img
+                    src="../../../assets/adventures/resort/resort3.jpg"
+                    alt="resort img 3"
+                    height="100%"
+                    width="100%"
+                  />
+                </div>
+              </div>
+            </div>
+            <div>
+              <p>
+                Nestled amidst serene natural surroundings, our resort offers
+                the perfect blend of luxury, comfort, and tranquility. Whether
+                you're seeking a romantic getaway, a family vacation, or a
+                peaceful solo retreat, our resort caters to all your needs.
+                Surrounded by lush greenery and breathtaking views, every corner
+                of our property is designed to help you unwind and rejuvenate.
+                Guests can relax in our elegantly furnished rooms and villas,
+                each offering modern amenities and a private balcony or terrace
+                to enjoy the scenic beauty. The resort features a
+                state-of-the-art spa, a sparkling infinity pool, and a range of
+                indoor and outdoor activities, ensuring there's something for
+                everyone. Our on-site restaurant serves a delightful selection
+                of local and international cuisine, made with fresh, locally
+                sourced ingredients. Whether you prefer lounging by the pool
+                with a refreshing drink, exploring nearby hiking trails, or
+                enjoying a soothing massage, the experience here is tailored to
+                create unforgettable memories. With exceptional service,
+                picturesque surroundings, and an atmosphere of calm, our resort
+                is more than just a destination—it’s a place to reconnect with
+                nature and yourself. Discover the ultimate escape where luxury
+                meets nature, and every moment is crafted for relaxation and
+                joy.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="border border-dark">
+              <h2>Sold out</h2>
+              <hr />
+              <p>
+                This Adventure is sold out but there is lot more to
+                <a
+                  style="color: rgb(23, 38, 200) !important"
+                  href="../../adventures/index.html"
+                  >Explore</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-   </div>
-   <footer>
-      <div class="container">© QTrip 2020</div>
-   </footer>
+    </div>
+    <footer>
+      <div class="container">© QTrip 2025 Made by Amit</div>
+    </footer>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"
-  ></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
