--- a/pages/adventures/resort/index.html
+++ b/pages/adventures/resort/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="col-12 col-lg-4">
             <div class="border border-dark">
-              <h2>Sold out</h2>
+              <h2 style="color: red;">Sold out</h2>
               <hr />
               <p>
                 This Adventure is sold out but there is lot more to
